# heckathon-2-phase-2

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/src/: database.py
backend/src/api/: main.py
frontend/app/: page.tsx
history/prompts/001-todo-in-memory-cli/: 002-spec-todo-cli.spec.prompt.md  003-plan-todo-cli.plan.prompt.md  004-tasks-todo-cli.tasks.prompt.md  005-tasks-todo-cli-refresh.tasks.prompt.md  006-implement-todo-cli.green.prompt.md  007-show-tasks-on-exit-and-refactor-backend.refactor.prompt.md  008-create-fastapi-backend-and-restructure.feature.prompt.md  009-setup-frontend.feature.prompt.md  011-add-summary-filters-and-suggestions.green.prompt.md  012-add-database-persistence.feature.prompt.md  013-push-to-github.general.prompt.md
history/prompts/constitution/: 001-ratify-constitution-v1.constitution.prompt.md
history/prompts/general/: 001-fix-nextjs-version-detection-error.general.prompt.md  002-execute-frontend-build.general.prompt.md
specs/001-todo-in-memory-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-in-memory-cli/checklists/: requirements.md
specs/001-todo-in-memory-cli/contracts/: cli_commands.md
specs/002-auth-service/: agent-persona.md  spec.md
specs/003-neon-db-manager/: agent-persona.md  plan.md  spec.md  tasks.md
src/: main.py
src/services/: task_manager.py
src/ui/: cli.py
tests/unit/: test_task_manager.py
